# environmental_sensor

./: CMakeLists.txt  README.md  main.cpp  u2u.c  u2u.h
u2u/: CMakeLists.txt  u2u.c  u2u.h  u2u_HAL_pico.c  u2u_HAL_pico.h  u2u_client_profile.h  u2uclientprofile.c  u2uclientprofile.h
