cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(bloodhound C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()
add_subdirectory(u2u)
add_subdirectory(sgp40)
add_executable(bloodhound main.cpp)
target_link_libraries(bloodhound  pico_stdlib hardware_uart hardware_dma hardware_i2c hardware_timer hardware_spi hardware_pwm pico_multicore u2u sgp40)
pico_enable_stdio_usb(bloodhound 1)
pico_enable_stdio_uart(bloodhound 0)
pico_add_extra_outputs(bloodhound)
